# Color-Splash-Reshuffled

./: CMakeLists.txt  README.md  exports.def  patch_rps_loader.asm  rules.txt
cs-headers/: .gitrepo
cs-headers/include/cs/: btl_ac.h  btl_eff.h  btl_spin.h  btl_unit.h  btl_weapon.h  elfmgr.h  evt.h  marioPouch.h  mariosnd.h  rand.h
cs-headers/include/wiiu/: memory.h
cs-headers/linker/: us.lst
include/: mod.h  patch.h
source/: linker.ld  main.cpp  mod.cpp  patch.cpp
